--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "nodemon": "^3.1.4"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.2",
+    "nodemon": "^3.1.4",
+    "sequelize": "^6.37.3"
   }
 }
